start demo project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git Demo Class</h1>
-    <p>hello</p>
+    <h1>My God is Good</h1>
 </body>
 </html>
