--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>My God is Good</h1>
     <p>Jesus is King</p>
     <p>pop smoke is dead</p>
+    <p>Dax is a good rapper</p>
 </body>
 </html>
