i added i am a web developer

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Jesus is King</p>
     <p>pop smoke is dead</p>
     <p>Dax is a good rapper</p>
+    <p>I am a web developer</p>
 </body>
 </html>
