i added anime list

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <p>pop smoke is dead</p>
     <p>Dax is a good rapper</p>
     <p>I am a web developer</p>
+    <h2>Anime's i love</h2>
+    <ul>
+        <li>jjk</li>
+        <li>coe</li>
+        <li>aot</li>
+    </ul>
 </body>
 </html>
